<resources>
    <string name="app_name">twms_f_m_android</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="password">password</string>
    <string name="user_id">user id</string>
    <string name="login">login</string>
    <string name="hello_from_menu">Hello from menu</string>
    <string name="receiving">Receiving</string>
    <string name="putaway">Putaway</string>
    <string name="pallet_number">Pallet Number</string>
    <string name="location">Location</string>
    <string name="source_location">Source Location</string>
    <string name="Percentage">&#160;%</string>
    <string name="inbound_order">Inbound Order:</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="receive">Receive</string>
    <string name="inbound_shipment">Inbound shipment:</string>
    <string name="inbound_orders">Inbound orders</string>
    <string name="close_inbound">Close inbound</string>
    <string name="no_more_inbound_shipments">No more inbound shipments.</string>
    <string name="replenishment">Replenishment</string>
    <string name="picking">Picking</string>
    <string name="deplenishment">Deplenishment</string>
    <string name="loading">Loading</string>
    <string name="transfer">Transfer</string>
    <string name="no_more_outbound_shipment">No more outbound shipment</string>
    <string name="pick">Pick</string>
    <string name="start_picking">Start picking</string>
    <string name="complete_pallet">Complete pallet</string>
    <string name="confirm">Confirm</string>
    <string name="no_more_loading">No more loading.</string>
    <string name="load">Load</string>
    <string name="finish">Finish</string>
    <string name="complete">Complete</string>
    <string name="imgdone">imgDone</string>
    <string name="no_more_putaway">No more putaway</string>
    <string name="no_more_picking">No more picking</string>
</resources>