<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inbound_shipment.InboundShipmentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvInboundShipmentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inbound_shipment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInboundShipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/tvInboundShipmentLabel"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="IS00000005" />

        <TextView
            android:id="@+id/tvLocationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            app:layout_constraintStart_toStartOf="@+id/tvInboundShipmentLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvInboundShipmentLabel" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tvLocationLabel"
            app:layout_constraintTop_toTopOf="@+id/tvLocationLabel"
            tools:text="RCV_STG_001" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/inbound_orders"
        app:layout_constraintBottom_toTopOf="@+id/btnCloseInbound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clHeader">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/clHeader"
            tools:layout_editor_absoluteX="-24dp"
            tools:listitem="@layout/adapter_inbound_shipment" />

    </ScrollView>

    <Button
        android:id="@+id/btnCloseInbound"
        android:layout_margin="8dp"
        android:text="@string/close_inbound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>