<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="#DADADA"
    android:elevation="4dp"
    android:orientation="vertical"
    app:cardCornerRadius="8dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvInboundOrderLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/inbound_order"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#121212" />

            <TextView
                android:id="@+id/tvInboundOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                tools:text="IO00002" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/item"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#121212" />

            <TextView
                android:id="@+id/tvItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                tools:text="I00000004" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/tvItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#121212"
            tools:text="fourth item" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvReceivedPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:paddingEnd="0dp"
                tools:ignore="RtlSymmetry"
                tools:text="50" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Percentage" />

            <TextView
                android:id="@+id/tvReceivedSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="4dp"
                tools:text="(50 of 100)" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/lpiReceived"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="50" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>